Modify parameters to use a new file with all configuration